--- a/src/pages/post/CreatePostPage.css
+++ b/src/pages/post/CreatePostPage.css
@@ -47,7 +47,7 @@
 .submit-text-btn {
   background: none;
   border: none;
-  color: #0095f6; /* 인스타 블루 */
+  color: #fcc41d;
   font-weight: 600;
   font-size: 14px;
   cursor: pointer;
