--- a/src/components/BottomNav.css
+++ b/src/components/BottomNav.css
@@ -39,8 +39,8 @@
 }
 
 .nav-item.active {
-  color: #000000; /* 인스타는 활성화되면 보통 검은색 */
-  font-weight: bold;
+  color: #000;
+  transform: scale(1.5);
 }
 
 .nav-item.create {
